# ttclock

./: .env.example  .gitignore  .ttclock.env.example  AGENTS.md  LESSONS.md  LESSONS.txt  README.md  STYLE.md  pyproject.toml  requirements.txt  time.py  ttclock.py  ttcron.bat  ttcron.sh
ttclock/: __init__.py  automation.py  cli.py  utils.py
